# python-setup-py-sample

./: README.md  setup.cfg  setup.py
src/logger/: app_logger.py
tests/: test_main.py
