[metadata]
name = logger
# version = 0.1.0
version = attr: logger.__version__
license = Apache Software License
# license_file = LICENSE
description = Application logger
# long_description = file: README.rst, CHANGES.rst
# long_description_content_type = text/x-rst
author="作成者"
author_email = test@gmail.com
url="GitHubなどURL"
keywords = logger, aws
classifiers =
       Development Status :: 5 - Production/Stable
       License :: OSI Approved :: Apache Software License
       Programming Language :: Python
       Programming Language :: Python :: 3
       Programming Language :: Python :: 3.6
       Programming Language :: Python :: 3.7
       Programming Language :: Python :: 3.8
       Programming Language :: Python :: 3.9
       Framework :: Django
       Framework :: Django :: 2.2
       Framework :: Django :: 3.0
       Framework :: Django :: 3.1
       Intended Audience :: Developers
       Environment :: Plugins
       Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6, <4
packages = find:
package_dir =
    = src
install_requires =
    requests
extras_requires =
    pytest
zip_safe = false

# MANIFEST.in を使うために必要。
# デフォルトでは、*.pyしか含まれないため。
# pip installでエラーになったら、export PYTHONUTF8=1
include_package_data = true

[options.packages.find]
where = src